Show tree view without clipping the focus ring

A focus ring usually shows outside the host view's bound. To properly
show the tree view with an item focused, we reserve the space for the
focus ring and make sure to scroll enough to have it visible.

Bug: 865930
Change-Id: I547e27f03ab9630fbded74e9e5d90c80db24b1d7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3039160
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#904432}